--- a/public/index.html
+++ b/public/index.html
@@ -4,8 +4,101 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Yedaş Todo App</title>
+  <!-- SurveyJS CSS -->
+  <link href="https://unpkg.com/survey-core/defaultV2.min.css" type="text/css" rel="stylesheet">
+  <script type="text/javascript" src="https://unpkg.com/survey-core/survey.core.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/survey-js-ui/survey-js-ui.min.js"></script>
+
+
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.12.9/dist/umd/popper.min.js" integrity="sha384-ApNbgh9B+Y1QKtv3Rn7W3mgPxhU9K/ScQsAP7hUibX39j7fakFPskvXusvfa0b4Q" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@4.0.0/dist/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+
 </head>
 <body>
-  <h1>Merhaba, başlangıçç..</h1>
+
+
+    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <a class="navbar-brand" href="#">YEDAS</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+      
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+          <ul class="navbar-nav mr-auto">
+            <!-- <li class="nav-item active">
+              <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link" href="#">Link</a>
+            </li> -->
+
+          </ul>
+          <form class="form-inline my-2 my-lg-0">
+            <button class="btn btn-outline-primary my-2 my-sm-0" type="button" onclick="$.loginModel()">Giriş</button>
+          </form>
+        </div>
+      </nav>
+
+
+  <div id="surveyContainer"></div>
+
+  <script>
+
+    const surveyJson = {
+        showCompletedPage:false,
+        elements: [{
+            name: "username",
+            title: "username",
+            type: "text"
+        }, {
+            name: "password",
+            title: "password",
+            type: "text",
+            inputType: "password"
+        }],
+        completeText: "Giriş Yap",
+    };
+
+
+    function surveyComplete (survey) {
+
+        const results = JSON.stringify(survey.data);
+
+        console.log(results);
+
+
+        // let url = "localhost:3000/api/auth/login";
+
+        // fetch(url, {
+        //     method: 'POST',
+        //     headers: {
+        //         'Content-Type': 'application/json;charset=UTF-8'
+        //     },
+        //     body: JSON.stringify(json)
+        // })
+        // .then(response => {
+        //     if (response.ok) {
+        //         // Handle success
+        //     } else {
+        //         // Handle error
+        //     }
+        // })
+        // .catch(error => {
+        //     // Handle error
+        // });
+    }
+
+
+    const survey = new Survey.Model(surveyJson);
+    survey.onComplete.add(surveyComplete);
+
+
+    $.loginModel = function() {
+        survey.render(document.getElementById("surveyContainer"));
+    }
+
+  </script>
 </body>
 </html>
